<resources>
    <string name="app_name">BusinessMonitor_api</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_unp_hint">Введите 9 цифр УНП</string>
    <string name="btn_search_text">Поиск</string>
    <string name="tv_advice_text">Для использования полного функционала рекомендуем Войти или Зарегистрироваться</string>
    <string name="btn_login_text">Войти</string>
    <string name="btn_register_text">Регистрация</string>

    <!-- BACKENDLESS-->
    <string name="tables_list_title">Tables</string>
    <string name="previous_page_symbol"><![CDATA[<<]]></string>
    <string name="next_page_symbol"><![CDATA[>>]]></string>
    <string name="list_row_with_arrow_description">list row arrow</string>
    <string name="table_operations_title_template">%s table operations</string>
    <string name="create_record_title_template">Create new %s</string>
    <string name="run_code_button_text">Run Code</string>
    <string name="send_code_button_text">Send Code by Email</string>
    <string name="success_title">Success</string>
    <string name="send_email_title">Send Code by Email</string>
    <string name="email_address_propmt">Email address:</string>
    <string name="send_button_text">Send</string>
    <string name="retrieve_title_template">Retrieve %s objects</string>
    <string name="default_sample_code_title">Sample Code</string>
    <string name="delete_title_template">Delete %s</string>
    <string name="update_title_template">Update %s</string>
    <string name="success_info_template">The record has been %s.</string>
    <string name="property_to_show_prompt">Property to show:</string>
    <string name="find_with_relations_title">Find with Relations</string>
    <string name="related_property_to_show_prompt">Related property to show:</string>
    <string name="related_table_name_template">%s:</string>
    <string name="basic_find_title">Basic Find</string>
    <string name="property_title">Property</string>
    <string name="value_title">Value</string>
    <string name="tv_addcompany_text">Добавить на контроль</string>
    <string name="tv_disputes_default">0</string>
    <string name="disputes_title">Судебные споры</string>
    <string name="badcompanies_title">Лжеструктуры</string>
    <string name="unp_title">УНП:</string>
    <string name="tv_badcompanies_default">не вкл.</string>


    <!-- fragment_badcompanies_result.xml -->
    <string name="details_reason">Основание</string>
    <string name="details_date_title">Дата включения</string>
    <string name="details_reason_title">Основание*</string>
    <string name="details_ukaz">*Указ Президента Республики Беларусь от 23.10.2012 № 488 \"О некоторых мерах по предупреждению незаконной минимизации сумм налоговых обязательств \"</string>
    <string name="item_court_text">Суд:</string>
    <string name="item_case_text">№ дела:</string>
    <string name="item_plaintiff_text">Истец:</string>
    <string name="item_matter_text">Суть спора:</string>
    <string name="item_date_text">Дата заседания:</string>
    <string name="item_judge_text">Судья:</string>
    <string name="tv_company_text">Наименование:</string>
    <string name="btn_delete_text">Удалить</string>
    <string name="btn_details_text">Просмотр</string>
    <string name="tv_warning">На данный момент допускается отслеживание 5 юрлиц и ИП</string>


</resources>
