<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    tools:context="by.tut.tiomkin.businessmonitor_api.ui.fragments.SearchResultFragment">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_title"
            android:id="@+id/tv_unp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unp_title"/>

        <TextView
            style="@style/text_value"
            android:id="@+id/tv_unp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            tools:text="100090562" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_companyname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_head"
        android:singleLine="false"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="общество с ограниченной ответственностью 'Баба Маня'" />

    <TableLayout
        android:id="@+id/tl_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_companyname"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow android:paddingTop="16dp">

            <TextView
                android:textColor="#51b2fd"
                android:layout_column="1"
                android:text="@string/badcompanies_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_badCompanies"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="не вкл."
                android:text="@string/tv_badcompanies_default"
                android:textColor="#51B2FD"/>
        </TableRow>

        <TableRow android:paddingTop="16dp">

            <TextView
                android:textColor="#51b2fd"
                android:layout_column="1"
                android:text="@string/disputes_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_disputes"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="5>>"
                android:text="@string/tv_disputes_default"
                android:textColor="#51B2FD"/>
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_marginTop="22dp"
        android:id="@+id/ll_addcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_table"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#51b2fd"
            android:text="@string/tv_addcompany_text"/>

    </LinearLayout>


</RelativeLayout>
