<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#51B2FD">

    <TableLayout
        android:id="@+id/tl_item_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="2">

        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_court_text"/>


            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_court_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Экономический суд г. Минска" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_case_text" />


            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_case_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="90-85/16" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_plaintiff_text" />


            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_plaintiff_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                tools:text="Общество с ограниченной ответственностью 'Абракадабра'; Частное унитарное предприятие 'Баба Маня'" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_matter_text" />


            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_matter_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                tools:text="21.01 о привлечении к субсидиарной ответственности" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_date_text" />


            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                tools:text="31.05.2016" />

        </TableRow>
        <TableRow>

            <TextView
                style="@style/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_judge_text" />

            <TextView
                style="@style/item_textview"
                android:id="@+id/tv_judge_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                tools:text="ЗАЙЦЕВА Н.А.;" />

        </TableRow>

    </TableLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>