<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_margin="@dimen/margin"
              android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/cv_controllist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#51B2FD">

        <TableLayout
            android:id="@+id/tl_item_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="2">

            <TableRow>

                <TextView
                    style="@style/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unp_title"/>


                <TextView
                    style="@style/item_textview"
                    android:id="@+id/tv_court_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="100090562" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_company_text" />


                <TextView
                    style="@style/item_textview"
                    android:id="@+id/tv_case_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Общество с ограниченной ответственностью 'Баба Маня'" />

            </TableRow>
            <TableRow
                android:weightSum="3">
                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn_delete_text"/>
                <Button
                    android:id="@+id/btn_details"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn_details_text"/>
            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>